--- a/glow-frontend/package.json
+++ b/glow-frontend/package.json
@@ -6,7 +6,10 @@
     "react": "^16.5.2",
     "react-actioncable-provider": "^1.0.3",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
+    "react-redux": "^5.0.7",
+    "react-scripts": "2.0.4",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
