--- a/glow-frontend/package.json
+++ b/glow-frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "activestorage": "^5.2.1",
     "react": "^16.5.2",
     "react-actioncable-provider": "^1.0.3",
     "react-dom": "^16.5.2",
